Changed footer to be fixed at bottom and made changes to layout  and lightbox to prevent overlap.

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -23,3 +23,15 @@
     width: 100%;
     height: 100%;
   }
+
+  .img-container {
+    flex: 1 1 auto;
+  }
+
+  .fpb {
+    padding-bottom: 400px !important;
+  }
+
+  .fmb {
+    margin-bottom: 4.8rem !important;
+  }
